[options]
packages = find:
test_suite = nnarch_tests
python_requires = >=3.6
install_requires =
    jsonargparse[all]>=2.25.4
    pygraphviz>=1.5
    networkx>=2.4
    sympy>=1.4


[options.extras_require]
test =
    coverage>=4.5.1
    wheel-inspect>=1.3.0
dev =
    pylint>=1.8.3
    pycodestyle>=2.5.0
    mypy>=0.701
    Sphinx>=1.7.9
    sphinx-rtd-theme>=0.4.3
    sphinx-argparse>=0.2.5
    autodocsumm>=0.1.10
    bump2version>=0.5.11


[metadata]
name = nnarch
version = 0.0.0
description = A framework for defining, validating and visualizing neural network architectures.
long-description = file: README.rst
author = Mauricio Villegas
author-email = mauricio@omnius.com
platforms = any


[coverage:run]
include = nnarch/**


[build_sphinx]
version = local build
release = local build
source_dir = sphinx
build_dir = sphinx/_build


[pycodestyle]
exclude = sphinx/conf.py,setup.py
ignore = E241,E265,E128,E266,E226,E722,E252,E231,W291,E303,E221,E402,E262,E225,W503,W504,E126
max-line-length = 180
