[options]
packages = find:
test_suite = narchi_tests
python_requires = >=3.6
install_requires =
    jsonargparse>=3.0.1
    jsonschema>=2.6.0
    jsonnet>=0.13.0
    networkx>=2.4
    sympy>=1.4


[options.extras_require]
all =
    %(pygraphviz)s
    %(pytorch)s
pygraphviz =
    pygraphviz>=1.5
pytorch =
    torch>=1.3.1
    numpy>=1.19.2
test =
    coverage>=4.5.1
dev =
    %(all)s
    %(test)s
    pylint>=1.8.3
    pycodestyle>=2.5.0
    bump2version>=0.5.11
    twine>=3.1.1
doc =
    Sphinx>=1.7.9
    sphinx-rtd-theme>=0.4.3
    sphinx-argparse>=0.2.5
    autodocsumm>=0.1.10
    sphinx-autodoc-typehints>=1.11.1
    json-schema-for-humans>=0.15.2


[metadata]
name = narchi
version = 1.5.2
description = A framework for defining, validating and visualizing neural network architectures.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mauricio Villegas
author_email = mauricio@omnius.com
license = MIT
url = https://omni-us.github.io/narchi
project_urls =
    Documentation-stable = https://narchi.readthedocs.io/en/stable/
    Documentation-latest = https://narchi.readthedocs.io/en/latest/
    GitHub = https://github.com/omni-us/narchi
    PyPI = https://pypi.org/project/narchi
    CircleCI = https://circleci.com/gh/omni-us/narchi
    SonarCloud = https://sonarcloud.io/dashboard?id=omni-us_narchi
    Codecov = https://codecov.io/gh/omni-us/narchi
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS


[options.entry_points]
console_scripts =
    narchi_cli.py = narchi.bin.narchi_cli:narchi_cli


[build_sphinx]
version = local build
release = local build
source_dir = sphinx
build_dir = sphinx/_build


[pycodestyle]
exclude = sphinx/conf.py,setup.py
ignore = E241,E265,E128,E266,E226,E722,E252,E231,W291,E303,E221,E402,E262,E225,W503,W504,E126
max-line-length = 180


[tox:tox]
envlist = py{36,37,38,39}


[testenv]
extras =
    pygraphviz
    test
changedir = narchi_tests
commands = discover --pattern='*_tests.py'
deps = discover
